# labgrid-plugins

./: CLAUDE.md  README.md  pyproject.toml
.github/workflows/: docs.yml  tests.yml
adi_lg_plugins/: __init__.py  strategies.py
adi_lg_plugins/drivers/: cyberpowerdriver.py  imageextractor.py  kuiperdldriver.py  massstoragedriver.py  shelldriver.py  vesyncdriver.py  xilinxjtagdriver.py
adi_lg_plugins/resources/: cyberpowerpdu.py  kuiperrelease.py  massstorage.py  vesync.py  xilinxdevice.py  xilinxtool.py
adi_lg_plugins/strategies/: bootfabric.py  bootfpgasoc.py  bootfpgasocssh.py  bootselmap.py
adi_lg_plugins/tools/: cli.py  kuiperdl.py  mcp.py  vesync.py
docs/: Makefile
docs/source/: conf.py  index.rst
docs/source/_static/: custom.css
docs/source/api/: drivers.rst  index.rst  resources.rst  strategies.rst
docs/source/developer-guide/: architecture.rst  contributing.rst  index.rst
docs/source/examples/: index.rst
docs/source/examples/advanced/: full-boot-cycle.rst  index.rst
docs/source/examples/simple/: index.rst  power-control.rst  shell-commands.rst
docs/source/getting-started/: configuration.rst  index.rst  installation.rst  quickstart.rst
docs/source/user-guide/: cli.rst  drivers.rst  examples.rst  index.rst  mcp.rst  resources.rst  strategies.rst
example_configs/: soc_fabric_ad9081_vcu118.yaml
tests/: test_cli.py  test_fabric_strat.py  test_fabric_vcu118.yaml  test_kuiper_dl.py  test_mcp.py  test_soc_strat.py  test_soc_strat_custom.py
