[build-system]
requires = ["setuptools>=47.2.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "adi-labgrid-plugins"
version = "0.1.0"
description = "labgrid plugin package for Analog Devices, Inc. (ADI) specific plugins."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "LGPL-2.1-or-later"}
authors = [
    {name = "Analog Devices, Inc."},
]
dependencies = [
    "labgrid @ git+https://github.com/tfcollins/labgrid.git@tfcollins/plugin-support",
    "pyvesync>=1.1.5,<3.0.0",
    "tqdm",
    "pytsk3",
    "pysnmp",
]

[project.urls]
Homepage = "https://github.com/analogdevicesinc/adi-labgrid-plugins"
Documentation = "https://adi-labgrid-plugins.readthedocs.io/"
Repository = "https://github.com/analogdevicesinc/adi-labgrid-plugins"

# Entry points for plugin discovery
# Labgrid automatically discovers and registers these components
[project.entry-points."labgrid.drivers"]
vesyncpowerdriver = "adi_lg_plugins.drivers.vesyncdriver:VesyncPowerDriver"
massstoragedriver = "adi_lg_plugins.drivers.massstoragedriver:MassStorageDriver"
adishelldriver = "adi_lg_plugins.drivers.shelldriver:ADIShellDriver"
kuiperdldriver = "adi_lg_plugins.drivers.kuiperdldriver:KuiperDLDriver"
cyberpowerdriver = "adi_lg_plugins.drivers.cyberpowerdriver:CyberPowerDriver"

[project.entry-points."labgrid.resources"]
vesyncresource = "adi_lg_plugins.resources.vesync:VesyncOutlet"
massstorageresource = "adi_lg_plugins.resources.massstorage:MassStorageDevice"
kuiperresource = "adi_lg_plugins.resources.kuiperrelease:KuiperRelease"
cyberpowerresource = "adi_lg_plugins.resources.cyberpowerpdu:CyberPowerOutlet"


[project.entry-points."labgrid.strategies"]
bootsocstrategy = "adi_lg_plugins.strategies.bootfpgasoc:BootFPGASoC"
bootsocsshstrategy = "adi_lg_plugins.strategies.bootfpgasocssh:BootFPGASoCSSH"
bootselmap = "adi_lg_plugins.strategies.bootselmap:BootSelMap"
