[build-system]
requires = ["setuptools>=47.2.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "adi-labgrid-plugins"
version = "0.1.0"
description = "labgrid plugin package for Analog Devices, Inc. (ADI) specific plugins."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Analog Devices, Inc."},
]
dependencies = [
    "labgrid @ git+https://github.com/tfcollins/labgrid.git@tfcollins/plugin-support",
    "pyvesync>=1.1.5,<3.0.0",
    "tqdm",
    "pytsk3",
    "pysnmp",
    "pylibiio",
    "click",
    "rich",
    "fastmcp",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8.0",
    "pytest>=7.0.0",
    "pylibiio",
]
docs = [
    "sphinx>=7.0.0",
    "furo>=2024.0.0",
    "sphinx-copybutton>=0.5.0",
    "sphinx-design>=0.5.0",
    "sphinxcontrib-mermaid",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["adi_lg_plugins", "adi_lg_plugins.*"]
exclude = ["test*"]
namespaces = true

[project.urls]
Homepage = "https://github.com/analogdevicesinc/adi-labgrid-plugins"
Documentation = "https://adi-labgrid-plugins.readthedocs.io/"
Repository = "https://github.com/analogdevicesinc/adi-labgrid-plugins"


# Add entry point scripts for tools
# kuiperdl
[project.scripts]
kuiperdl = "adi_lg_plugins.tools.kuiperdl:main"
adi-lg = "adi_lg_plugins.tools.cli:cli"
adi-lg-mcp = "adi_lg_plugins.tools.mcp:main"

# Entry points for plugin discovery
# Labgrid automatically discovers and registers these components
[project.entry-points."labgrid.drivers"]
vesyncpowerdriver = "adi_lg_plugins.drivers.vesyncdriver:VesyncPowerDriver"
massstoragedriver = "adi_lg_plugins.drivers.massstoragedriver:MassStorageDriver"
adishelldriver = "adi_lg_plugins.drivers.shelldriver:ADIShellDriver"
kuiperdldriver = "adi_lg_plugins.drivers.kuiperdldriver:KuiperDLDriver"
cyberpowerdriver = "adi_lg_plugins.drivers.cyberpowerdriver:CyberPowerDriver"
xilinxjtagdriver = "adi_lg_plugins.drivers.xilinxjtagdriver:XilinxJTAGDriver"

[project.entry-points."labgrid.resources"]
vesyncresource = "adi_lg_plugins.resources.vesync:VesyncOutlet"
massstorageresource = "adi_lg_plugins.resources.massstorage:MassStorageDevice"
kuiperresource = "adi_lg_plugins.resources.kuiperrelease:KuiperRelease"
cyberpowerresource = "adi_lg_plugins.resources.cyberpowerpdu:CyberPowerOutlet"
xilinxdevicejtag = "adi_lg_plugins.resources.xilinxdevice:XilinxDeviceJTAG"
xilinxvivadotool = "adi_lg_plugins.resources.xilinxtool:XilinxVivadoTool"


[project.entry-points."labgrid.strategies"]
bootsocstrategy = "adi_lg_plugins.strategies.bootfpgasoc:BootFPGASoC"
bootsocsshstrategy = "adi_lg_plugins.strategies.bootfpgasocssh:BootFPGASoCSSH"
bootselmap = "adi_lg_plugins.strategies.bootselmap:BootSelMap"
bootfabric = "adi_lg_plugins.strategies.bootfabric:BootFabric"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
